# flask_template

./: .env.sample  Dockerfile  README.md  compose.prod.yaml  compose.yaml  ngrok.yml  pyproject.toml
flask-app/: app.py
flask-app/static/styles/: index.css
flask-app/templates/: index.html  layout.html
